# mamoru-wit-agent-templat

./: .gitignore  Cargo.toml  README.md  cargo-generate.toml  manifest.yaml
src/: lib.rs
wit/: components.wit
